--- a/index.html
+++ b/index.html
@@ -5,10 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
+    <!-- Logo & Navigation -->
+    <header class="main-header">
+        <!-- Logo -->
+        <div class="Logo-Icon">
+            <img src="https://storage.googleapis.com/danacita-website-v3-prd/website_v3/images/Revou-alasan.original.png" alt="Logo Icon Revou">
+        </div>
 
+        <!-- Navigation-->
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Our Profile</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Message Us</a>
+        </nav>
+
+    </header>
+
+    <hr />
+
+    <!-- Main Content -->
+    <main>
+        <!-- Home Page -->
+        <section>
+            <!-- Title -->
+            <header>
+                <h1>Hi <span id="user-greeting">User</span>, Welcome to our website </h1>
+                <p>Ini adalah website latihan pertama</p>
+            </header>
+
+            <div class="banner-image"></div>
+        </section>
+
+        <!-- Our Profile -->
+        <section>
+            <!-- Title -->
+            <header>
+                <h1>Our Profile </h1>
+            </header>
+
+            <div class="content"></div>
+        </section>
+
+        <!-- Portfolio -->
+        <section>
+            <!-- Title -->
+            <header>
+                <h1>Portfolio </h1>
+            </header>
+
+            <div class="content"></div>
+        </section>
+
+        <!-- Message Us -->
+         <section>
+            <!-- Title -->
+            <header>
+                <h1>Message Us</h1>
+            </header>
+
+            <div class="content"></div>
+         </section>
+
+    </main>
+
+    <hr />
+
+    <!-- Footer -->
+    <footer>
+        <header>
+            <p2>Create By Nazla</p2>
+        </header>
+    </footer>
 </body>
 
 </html>
